--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link href="css/select2.min.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/select2.min.js"></script>
+  <script src="index.js"></script>
 </head>
 <body>
   <h1>Travel Planner</h1>
@@ -346,7 +347,7 @@
         $('.select_search').select2();
     });
   </script>
-  <script type="text/javascript">
+  <script class="range" type="text/javascript">
     const range=document.querySelector("#budget");
     const output=document.querySelector("#budgetOutput");
 
