--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Travel Planner /World var.</title>
-  <meta charset="utf-8" />
-  <meta lang="en"/>
-  <link href="/css/select2.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="./css/select2.min.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/js/select2.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="./js/select2.min.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 <body>
   <h1>Travel Planner</h1>
@@ -364,5 +364,3 @@
   </script>
 </body>
 </html>
-
-<!-- 試作品 -->
