--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <link href="/css/select2.min.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="/js/select2.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="/js/getResponse.js"></script>
 </head>
 <body>
   <h1>Travel Planner</h1>
@@ -178,7 +178,7 @@
 
     <div class="form-devition">
       <label for="budget">What is your budget for this trip?<br>
-      <input type="range" min="0" max="1000" value="50" step="1" list="markers" id="budget" name="budget"></label>
+      <input type="range" min="0" max="100" value="50" step="1" list="markers" id="budget" name="budget"></label>
       <output id="budgetOutput"></output>
       <datalist id="markers">
         <option value="¥0K" label="0K"></option>
@@ -223,8 +223,6 @@
 
     function setOutput(range,output) {
       const value=range.value;
-      const min=0;
-      const max=100;
       output.value="¥" +value + "K";
     }
     setOutput(range,output);
@@ -233,9 +231,8 @@
     });
 
     // checkbox
-    // APIのmaxトークンの関係上checkboxの選択可能数を最大3に設定する
     function limitCheckbox(group) {
-      const limit = 3;
+      const limit = 5;
       let checkedCount = 0;
       const boxes = group.querySelectorAll("input");
       for(let box of boxes) {
