add css animation

--- a/client/index.html
+++ b/client/index.html
@@ -223,7 +223,27 @@
       </div>
     </section>
     <secetion class="halfScreen hidden" id="madePlan">
-      <h5 id="loadingMessage">Making your plan...</h5>
+      <h5 id="loadingMessage">
+        <span class ="bound">M</span>
+        <span class ="bound">a</span>
+        <span class ="bound">k</span>
+        <span class ="bound">i</span>
+        <span class ="bound">n</span>
+        <span class ="bound">g</span>
+        <span class ="bound"> </span>
+        <span class ="bound">y</span>
+        <span class ="bound">o</span>
+        <span class ="bound">u</span>
+        <span class ="bound">r</span>
+        <span class ="bound"> </span>
+        <span class ="bound">p</span>
+        <span class ="bound">l</span>
+        <span class ="bound">a</span>
+        <span class ="bound">n</span>
+        <span class ="dots" id="dot1">.</span>
+        <span class ="dots" id="dot2">.</span>
+        <span class ="dots" id="dot3">.</span>
+      </h5>
     </secetion>
   </main>
 
